--- a/TPA_DGMK/Logging/Logging.csproj
+++ b/TPA_DGMK/Logging/Logging.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6374CB47-A4D2-4DCC-AEF0-7EECD4B4BED7}</ProjectGuid>
+    <ProjectGuid>{78B6E34B-CE2B-4E97-A8A2-685023020749}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BusinessLogic</RootNamespace>
-    <AssemblyName>BusinessLogic</AssemblyName>
+    <RootNamespace>Logging</RootNamespace>
+    <AssemblyName>Logging</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -32,6 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -41,40 +42,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Model\Enums\AbstractEnum.cs" />
-    <Compile Include="Model\Enums\AccessLevel.cs" />
-    <Compile Include="Model\AssemblyMetadata.cs" />
-    <Compile Include="Model\Enums\TypeKindEnum.cs" />
-    <Compile Include="Model\ExtenstionMethods.cs" />
-    <Compile Include="Model\FieldMetadata.cs" />
-    <Compile Include="Model\MethodMetadata.cs" />
-    <Compile Include="Model\NamespaceMetadata.cs" />
-    <Compile Include="Model\ParameterMetadata.cs" />
+    <Compile Include="FileLogger.cs" />
+    <Compile Include="Logger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Model\PropertyMetadata.cs" />
-    <Compile Include="Model\Enums\SealedEnum.cs" />
-    <Compile Include="Model\Enums\StaticEnum.cs" />
-    <Compile Include="Model\TypeMetadata.cs" />
-    <Compile Include="Model\Enums\VirtualEnum.cs" />
-    <Compile Include="ViewModel\ExtensionMethods.cs" />
-    <Compile Include="ViewModel\IFileSelector.cs" />
-    <Compile Include="ViewModel\RelayCommand.cs" />
-    <Compile Include="ViewModel\TreeViewItem.cs" />
-    <Compile Include="ViewModel\TreeViewItems\AssemblyViewModel.cs" />
-    <Compile Include="ViewModel\TreeViewItems\AttributeViewModel.cs" />
-    <Compile Include="ViewModel\TreeViewItems\FieldViewModel.cs" />
-    <Compile Include="ViewModel\TreeViewItems\MethodViewModel.cs" />
-    <Compile Include="ViewModel\TreeViewItems\NamespaceViewModel.cs" />
-    <Compile Include="ViewModel\TreeViewItems\ParameterViewModel.cs" />
-    <Compile Include="ViewModel\TreeViewItems\PropertyViewModel.cs" />
-    <Compile Include="ViewModel\TreeViewItems\TypeViewModel.cs" />
-    <Compile Include="ViewModel\ViewModelBase.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Logging\Logging.csproj">
-      <Project>{78b6e34b-ce2b-4e97-a8a2-685023020749}</Project>
-      <Name>Logging</Name>
-    </ProjectReference>
+    <Compile Include="SeverityEnum.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
