Second View added - WPF project

--- a/TPA_DGMK/Wpf/App.config
+++ b/TPA_DGMK/Wpf/App.config
@@ -3,4 +3,31 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+
+  <appSettings>
+    <add key="traceLevel" value="Information" />
+    <add key="logSourceName" value="AppLog" />
+    <add key="loggingComponent" value="Logging.FileLogger" />
+  </appSettings>
+
+  <!--system.diagnostics trace-->
+  <system.diagnostics>
+    <sources>
+      <source name="AppLog" switchName="AppSourceSwitch" switchType="System.Diagnostics.SourceSwitch">
+        <listeners>
+          <add name="AppListener" type="System.Diagnostics.TextWriterTraceListener" initializeData="./../../../Logging/bin/Debug/AppLog.txt" />
+          <remove name="Default" />
+        </listeners>
+      </source>
+    </sources>
+    <switches>
+      <add name="AppSourceSwitch" value="All" />
+    </switches>
+    <trace autoflush="true" indentsize="4">
+      <listeners>
+        <add name="AppListener" />
+      </listeners>
+    </trace>
+  </system.diagnostics>
+  
 </configuration>
