Attempting to change project structure

--- a/TPA_DGMK/CommandLine/CommandLine.csproj
+++ b/TPA_DGMK/CommandLine/CommandLine.csproj
@@ -57,13 +57,13 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\BusinessLogic\BusinessLogic.csproj">
-      <Project>{6374CB47-A4D2-4DCC-AEF0-7EECD4B4BED7}</Project>
-      <Name>BusinessLogic</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Logging\Logging.csproj">
       <Project>{78b6e34b-ce2b-4e97-a8a2-685023020749}</Project>
       <Name>Logging</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ViewModel\ViewModel.csproj">
+      <Project>{c39c22ef-6b57-4159-9ad0-c84a1973a2a2}</Project>
+      <Name>ViewModel</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
