--- a/TPA_DGMK/BusinessLogic/BusinessLogic.csproj
+++ b/TPA_DGMK/BusinessLogic/BusinessLogic.csproj
@@ -42,34 +42,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Model\Enums\AbstractEnum.cs" />
-    <Compile Include="Model\Enums\AccessLevel.cs" />
-    <Compile Include="Model\AssemblyMetadata.cs" />
-    <Compile Include="Model\Enums\TypeKindEnum.cs" />
-    <Compile Include="Model\ExtenstionMethods.cs" />
-    <Compile Include="Model\FieldMetadata.cs" />
-    <Compile Include="Model\MethodMetadata.cs" />
-    <Compile Include="Model\NamespaceMetadata.cs" />
-    <Compile Include="Model\ParameterMetadata.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Model\PropertyMetadata.cs" />
-    <Compile Include="Model\Enums\SealedEnum.cs" />
-    <Compile Include="Model\Enums\StaticEnum.cs" />
-    <Compile Include="Model\TypeMetadata.cs" />
-    <Compile Include="Model\Enums\VirtualEnum.cs" />
-    <Compile Include="ViewModel\ExtensionMethods.cs" />
-    <Compile Include="ViewModel\IFileSelector.cs" />
-    <Compile Include="ViewModel\RelayCommand.cs" />
-    <Compile Include="ViewModel\TreeViewItem.cs" />
-    <Compile Include="ViewModel\TreeViewItems\AssemblyViewModel.cs" />
-    <Compile Include="ViewModel\TreeViewItems\AttributeViewModel.cs" />
-    <Compile Include="ViewModel\TreeViewItems\FieldViewModel.cs" />
-    <Compile Include="ViewModel\TreeViewItems\MethodViewModel.cs" />
-    <Compile Include="ViewModel\TreeViewItems\NamespaceViewModel.cs" />
-    <Compile Include="ViewModel\TreeViewItems\ParameterViewModel.cs" />
-    <Compile Include="ViewModel\TreeViewItems\PropertyViewModel.cs" />
-    <Compile Include="ViewModel\TreeViewItems\TypeViewModel.cs" />
-    <Compile Include="ViewModel\ViewModelBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Data%28de%29Serialization\Data%28De%29Serialization.csproj">
@@ -81,5 +54,6 @@
       <Name>Logging</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
