--- a/TPA_DGMK/ViewModel/ViewModel.csproj
+++ b/TPA_DGMK/ViewModel/ViewModel.csproj
@@ -4,15 +4,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B925D28A-6FE3-40E6-B670-3E6E294F3236}</ProjectGuid>
+    <ProjectGuid>{C39C22EF-6B57-4159-9AD0-C84A1973A2A2}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Data_de_Serialization</RootNamespace>
-    <AssemblyName>Data%28de%29Serialization</AssemblyName>
+    <RootNamespace>ViewModel</RootNamespace>
+    <AssemblyName>ViewModel</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -33,9 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -44,11 +41,30 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SerializerTemplate.cs" />
+    <Compile Include="ExtensionMethods.cs" />
+    <Compile Include="IFileSelector.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="XMLSerializer.cs" />
+    <Compile Include="RelayCommand.cs" />
+    <Compile Include="TreeViewItem.cs" />
+    <Compile Include="TreeViewItems\AssemblyViewModel.cs" />
+    <Compile Include="TreeViewItems\AttributeViewModel.cs" />
+    <Compile Include="TreeViewItems\FieldViewModel.cs" />
+    <Compile Include="TreeViewItems\MethodViewModel.cs" />
+    <Compile Include="TreeViewItems\NamespaceViewModel.cs" />
+    <Compile Include="TreeViewItems\ParameterViewModel.cs" />
+    <Compile Include="TreeViewItems\PropertyViewModel.cs" />
+    <Compile Include="TreeViewItems\TypeViewModel.cs" />
+    <Compile Include="ViewModelBase.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Data%28de%29Serialization\Data%28De%29Serialization.csproj">
+      <Project>{b925d28a-6fe3-40e6-b670-3e6e294f3236}</Project>
+      <Name>Data%28De%29Serialization</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Logging\Logging.csproj">
+      <Project>{78b6e34b-ce2b-4e97-a8a2-685023020749}</Project>
+      <Name>Logging</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Model\Model.csproj">
       <Project>{99557a26-9024-4beb-9a98-d96faed65d25}</Project>
       <Name>Model</Name>
