Changed project structure, it works somehow, test had accessibillity issues, so I changed access levels in model's methods

--- a/TPA_DGMK/UnitTest/UnitTest.csproj
+++ b/TPA_DGMK/UnitTest/UnitTest.csproj
@@ -63,6 +63,14 @@
       <Project>{78B6E34B-CE2B-4E97-A8A2-685023020749}</Project>
       <Name>Logging</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Model\Model.csproj">
+      <Project>{99557a26-9024-4beb-9a98-d96faed65d25}</Project>
+      <Name>Model</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ViewModel\ViewModel.csproj">
+      <Project>{c39c22ef-6b57-4159-9ad0-c84a1973a2a2}</Project>
+      <Name>ViewModel</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
