--- a/TPA_DGMK/Wpf/Wpf.csproj
+++ b/TPA_DGMK/Wpf/Wpf.csproj
@@ -38,6 +38,9 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Configuration" />
+    <Reference Include="System.Configuration.ConfigurationManager, Version=4.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Configuration.ConfigurationManager.4.4.0\lib\net461\System.Configuration.ConfigurationManager.dll</HintPath>
+    </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
@@ -90,6 +93,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -102,11 +106,11 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Logging\Logging.csproj">
-      <Project>{78b6e34b-ce2b-4e97-a8a2-685023020749}</Project>
+      <Project>{f15a466f-8472-4826-a270-b135cb532188}</Project>
       <Name>Logging</Name>
     </ProjectReference>
     <ProjectReference Include="..\ViewModel\ViewModel.csproj">
-      <Project>{c39c22ef-6b57-4159-9ad0-c84a1973a2a2}</Project>
+      <Project>{9529f2b1-19de-4a95-be82-fdd08828a898}</Project>
       <Name>ViewModel</Name>
     </ProjectReference>
   </ItemGroup>
