MEF step 1, to be continued

--- a/TPA_DGMK/UnitTestLogging/App.config
+++ b/TPA_DGMK/UnitTestLogging/App.config
@@ -10,8 +10,8 @@
   <appSettings>
     <add key="traceLevel" value="Information" />
     <add key="logSourceName" value="AppLog" />
-    <add key="loggingComponent" value="Logging.FileLogger" />
-    <add key="serializingComponent" value="Data(de)Serialization.XMLSerializer" />
+    <add key="loggingComponent" value="FileLogger" />
+    <add key="serializingComponent" value="XMLSerializer" />
   </appSettings>
   
   <entityFramework>
