--- a/TPA_DGMK/CommandLine/App.config
+++ b/TPA_DGMK/CommandLine/App.config
@@ -3,15 +3,15 @@
   <configSections>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+  </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
   <appSettings>
     <add key="traceLevel" value="Information" />
     <add key="logSourceName" value="AppLog" />
-    <add key="loggingComponent" value="Logging.FileLogger" />
-    <add key="serializingComponent" value="Data(de)Serialization.DatabaseSerializer" />
+    <add key="loggingComponent" value="DatabaseLogger" />
+    <add key="serializingComponent" value="XMLSerializer" />
   </appSettings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
