--- a/TPA_DGMK/CommandLine/CommandLine.csproj
+++ b/TPA_DGMK/CommandLine/CommandLine.csproj
@@ -73,6 +73,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CLDatabaseSelector.cs" />
     <Compile Include="CLFileSelector.cs" />
     <Compile Include="CLView.cs" />
     <Compile Include="Program.cs" />
@@ -85,6 +86,14 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Data%28de%29Serialization\Data%28de%29Serialization.csproj">
+      <Project>{116EE92B-B3C4-462F-AED8-7403E84111B5}</Project>
+      <Name>Data%28de%29Serialization</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Logging\Logging.csproj">
+      <Project>{B4F4C31F-F8AF-44EE-876F-356E1628D7A8}</Project>
+      <Name>Logging</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ViewModel\ViewModel.csproj">
       <Project>{9529f2b1-19de-4a95-be82-fdd08828a898}</Project>
       <Name>ViewModel</Name>
