--- a/TPA_DGMK/Data(de)Serialization/Data(De)Serialization.csproj
+++ b/TPA_DGMK/Data(de)Serialization/Data(De)Serialization.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="EntityFramework" Version="6.2.0" />
+    <PackageReference Include="System.ComponentModel.Composition" Version="4.5.0" />
   </ItemGroup>
 
   <ItemGroup>
