--- a/TPA_DGMK/Wpf/App.config
+++ b/TPA_DGMK/Wpf/App.config
@@ -10,8 +10,8 @@
   <appSettings>
     <add key="traceLevel" value="Information" />
     <add key="logSourceName" value="AppLog" />
-    <add key="loggingComponent" value="Logging.DatabaseLogger" />
-    <add key="serializingComponent" value="Data(de)Serialization.DatabaseSerializer" />
+    <add key="loggingComponent" value="DatabaseLogger" />
+    <add key="serializingComponent" value="XMLSerializer" />
   </appSettings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
