Back to working xml serialization and tests about it.

--- a/TPA_DGMK/UnitTestSerializing/App.config
+++ b/TPA_DGMK/UnitTestSerializing/App.config
@@ -10,7 +10,7 @@
   </startup>
   <paths>
     <add key="./../../../ModelXml/bin/Debug"/>
-    <add key="./../../../Model/bin/Debug/netstandard2.0"/>
+    <add key="./../../../BusinessLogic/bin/Debug"/>
   </paths>
   <appSettings>
     <add key="traceLevel" value="Information"/>
