Repaired logging to file, added communicats about successful loading, serializing and deserializing. Small changes in ModelDB.

--- a/TPA_DGMK/ClFileSelector/ClFileSelector.csproj
+++ b/TPA_DGMK/ClFileSelector/ClFileSelector.csproj
@@ -41,9 +41,11 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClDatabaseSelector.cs" />
+    <Compile Include="ClDisplayInformation.cs" />
     <Compile Include="ClFileSelector.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
