--- a/TPA_DGMK/UnitTestXmlSerializing/UnitTestXmlSerializing.csproj
+++ b/TPA_DGMK/UnitTestXmlSerializing/UnitTestXmlSerializing.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{67217D33-0367-4531-9522-722899F14A20}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>UnitTestSerializing</RootNamespace>
-    <AssemblyName>UnitTestSerializing</AssemblyName>
+    <RootNamespace>UnitTestXmlSerializing</RootNamespace>
+    <AssemblyName>UnitTestXmlSerializing</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
