--- a/TPA_DGMK/ViewModel/ViewModel.csproj
+++ b/TPA_DGMK/ViewModel/ViewModel.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="ExtensionMethods.cs" />
     <Compile Include="IDatabaseSelector.cs" />
+    <Compile Include="IDisplay.cs" />
     <Compile Include="IFileSelector.cs" />
     <Compile Include="RelayCommand.cs" />
     <Compile Include="TreeViewItem.cs" />
