--- a/TPA_DGMK/Wpf/App.config
+++ b/TPA_DGMK/Wpf/App.config
@@ -10,8 +10,8 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.1" />
   </startup>
   <paths>
-    <!--<add key="./../../../ModelDB/bin/Debug" />-->
-    <add key="./../../../ModelXml/bin/Debug" />
+    <add key="./../../../ModelDB/bin/Debug" />
+    <!--<add key="./../../../ModelXml/bin/Debug" />-->
     <add key="./../../../WpfFileSelector/bin/Debug" />
   </paths>
   <appSettings>
@@ -83,7 +83,7 @@
     <sources>
       <source name="AppLog" switchName="AppSourceSwitch" switchType="System.Diagnostics.SourceSwitch">
         <listeners>
-          <add name="AppListener" type="System.Diagnostics.TextWriterTraceListener" initializeData="./../../../Logging/bin/Debug/AppLog.txt" />
+          <add name="AppListener" type="System.Diagnostics.TextWriterTraceListener" initializeData="./../../../LoggerBase/bin/Debug/AppLog.txt" />
           <remove name="Default" />
         </listeners>
       </source>
