Changes in database model and added classes for modifiers.

--- a/TPA_DGMK/Data/Data.csproj
+++ b/TPA_DGMK/Data/Data.csproj
@@ -32,6 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
@@ -55,6 +56,8 @@
     <Compile Include="Enums\TypeKind.cs" />
     <Compile Include="Enums\VirtualEnum.cs" />
     <Compile Include="ISerializer.cs" />
+    <Compile Include="Modifiers\MethodModifiers.cs" />
+    <Compile Include="Modifiers\TypeModifiers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
