--- a/TPA_DGMK/CommandLine/App.config
+++ b/TPA_DGMK/CommandLine/App.config
@@ -1,81 +1,81 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
-    <section name="paths" type="System.Configuration.AppSettingsSection"/>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+    <section name="paths" type="System.Configuration.AppSettingsSection" />
+    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.1"/>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.1" />
   </startup>
   <paths>
     <!--<add key="./../../../ModelDB/bin/Debug" />-->
-    <add key="./../../../ModelXml/bin/Debug"/>
-    <add key="./../../../ClFileSelector/bin/Debug"/>
+    <add key="./../../../ModelXml/bin/Debug" />
+    <add key="./../../../ClFileSelector/bin/Debug" />
   </paths>
   <appSettings>
-    <add key="traceLevel" value="Information"/>
-    <add key="logSourceName" value="AppLog"/>
+    <add key="traceLevel" value="Information" />
+    <add key="logSourceName" value="AppLog" />
   </appSettings>
   <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework"/>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
   <log4net>
     <root>
-      <level value="DEBUG"/>
-      <appender-ref ref="AdoNetAppender"/>
+      <level value="DEBUG" />
+      <appender-ref ref="AdoNetAppender" />
     </root>
     <appender name="AdoNetAppender" type="log4net.Appender.AdoNetAppender">
-      <bufferSize value="1"/>
-      <connectionType value="System.Data.SqlClient.SqlConnection, System.Data, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"/>
-      <connectionString value="Data source=.;Initial catalog=Logging;integrated security=true;persist security info=True;"/>
-      <commandText value="INSERT INTO Log ([Date],[Thread],[Level],[Logger],[Message],[Exception]) VALUES (@log_date, @thread, @log_level, @logger, @message, @exception)"/>
+      <bufferSize value="1" />
+      <connectionType value="System.Data.SqlClient.SqlConnection, System.Data, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+      <connectionString value="Data source=.;Initial catalog=Logging;integrated security=true;persist security info=True;" />
+      <commandText value="INSERT INTO Log ([Date],[Thread],[Level],[Logger],[Message],[Exception]) VALUES (@log_date, @thread, @log_level, @logger, @message, @exception)" />
       <parameter>
-        <parameterName value="@log_date"/>
-        <dbType value="DateTime"/>
-        <layout type="log4net.Layout.RawTimeStampLayout"/>
+        <parameterName value="@log_date" />
+        <dbType value="DateTime" />
+        <layout type="log4net.Layout.RawTimeStampLayout" />
       </parameter>
       <parameter>
-        <parameterName value="@thread"/>
-        <dbType value="String"/>
-        <size value="255"/>
+        <parameterName value="@thread" />
+        <dbType value="String" />
+        <size value="255" />
         <layout type="log4net.Layout.PatternLayout">
-          <conversionPattern value="%thread"/>
+          <conversionPattern value="%thread" />
         </layout>
       </parameter>
       <parameter>
-        <parameterName value="@log_level"/>
-        <dbType value="String"/>
-        <size value="50"/>
+        <parameterName value="@log_level" />
+        <dbType value="String" />
+        <size value="50" />
         <layout type="log4net.Layout.PatternLayout">
-          <conversionPattern value="%level"/>
+          <conversionPattern value="%level" />
         </layout>
       </parameter>
       <parameter>
-        <parameterName value="@logger"/>
-        <dbType value="String"/>
-        <size value="255"/>
+        <parameterName value="@logger" />
+        <dbType value="String" />
+        <size value="255" />
         <layout type="log4net.Layout.PatternLayout">
-          <conversionPattern value="%logger"/>
+          <conversionPattern value="%logger" />
         </layout>
       </parameter>
       <parameter>
-        <parameterName value="@message"/>
-        <dbType value="String"/>
-        <size value="4000"/>
+        <parameterName value="@message" />
+        <dbType value="String" />
+        <size value="4000" />
         <layout type="log4net.Layout.PatternLayout">
-          <conversionPattern value="%message"/>
+          <conversionPattern value="%message" />
         </layout>
       </parameter>
       <parameter>
-        <parameterName value="@exception"/>
-        <dbType value="String"/>
-        <size value="2000"/>
-        <layout type="log4net.Layout.ExceptionLayout"/>
+        <parameterName value="@exception" />
+        <dbType value="String" />
+        <size value="2000" />
+        <layout type="log4net.Layout.ExceptionLayout" />
       </parameter>
     </appender>
   </log4net>
@@ -85,17 +85,17 @@
     <sources>
       <source name="AppLog" switchName="AppSourceSwitch" switchType="System.Diagnostics.SourceSwitch">
         <listeners>
-          <add name="AppListener" type="System.Diagnostics.TextWriterTraceListener" initializeData="./../../../LoggerBase/bin/Debug/AppLog.txt"/>
-          <remove name="Default"/>
+          <add name="AppListener" type="System.Diagnostics.TextWriterTraceListener" initializeData="./../../../LoggerBase/bin/Debug/AppLog.txt" />
+          <remove name="Default" />
         </listeners>
       </source>
     </sources>
     <switches>
-      <add name="AppSourceSwitch" value="All"/>
+      <add name="AppSourceSwitch" value="All" />
     </switches>
     <trace autoflush="true" indentsize="4">
       <listeners>
-        <add name="AppListener"/>
+        <add name="AppListener" />
       </listeners>
     </trace>
   </system.diagnostics>
