--- a/TPA_DGMK/CommandLine/CommandLine.csproj
+++ b/TPA_DGMK/CommandLine/CommandLine.csproj
@@ -46,6 +46,7 @@
     <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
   </ItemGroup>
   <ItemGroup>
