Change reflector way of loading libraries, remove redundant projects to build dll for tests and remove indirectly class LogicService.

--- a/TPA_DGMK/ViewModel/ViewModel.csproj
+++ b/TPA_DGMK/ViewModel/ViewModel.csproj
@@ -57,6 +57,10 @@
       <Project>{9820C2B1-C91C-4677-BAD3-8F7D86041DEA}</Project>
       <Name>BusinessLogic</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Data\Data.csproj">
+      <Project>{F7A14A4D-6CCD-4395-813F-7448B086F726}</Project>
+      <Name>Data</Name>
+    </ProjectReference>
     <ProjectReference Include="..\LoggerBase\LoggerBase.csproj">
       <Project>{A8C42BCF-7B4E-4E9F-86B6-27FEF1E15D4D}</Project>
       <Name>LoggerBase</Name>
