--- a/TPA_DGMK/CommandLine/App.config
+++ b/TPA_DGMK/CommandLine/App.config
@@ -24,68 +24,12 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <log4net>
-    <root>
-      <level value="DEBUG" />
-      <appender-ref ref="AdoNetAppender" />
-    </root>
-    <appender name="AdoNetAppender" type="log4net.Appender.AdoNetAppender">
-      <bufferSize value="1" />
-      <connectionType value="System.Data.SqlClient.SqlConnection, System.Data, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-      <connectionString value="Data source=.;Initial catalog=Logging;integrated security=true;persist security info=True;" />
-      <commandText value="INSERT INTO Log ([Date],[Thread],[Level],[Logger],[Message],[Exception]) VALUES (@log_date, @thread, @log_level, @logger, @message, @exception)" />
-      <parameter>
-        <parameterName value="@log_date" />
-        <dbType value="DateTime" />
-        <layout type="log4net.Layout.RawTimeStampLayout" />
-      </parameter>
-      <parameter>
-        <parameterName value="@thread" />
-        <dbType value="String" />
-        <size value="255" />
-        <layout type="log4net.Layout.PatternLayout">
-          <conversionPattern value="%thread" />
-        </layout>
-      </parameter>
-      <parameter>
-        <parameterName value="@log_level" />
-        <dbType value="String" />
-        <size value="50" />
-        <layout type="log4net.Layout.PatternLayout">
-          <conversionPattern value="%level" />
-        </layout>
-      </parameter>
-      <parameter>
-        <parameterName value="@logger" />
-        <dbType value="String" />
-        <size value="255" />
-        <layout type="log4net.Layout.PatternLayout">
-          <conversionPattern value="%logger" />
-        </layout>
-      </parameter>
-      <parameter>
-        <parameterName value="@message" />
-        <dbType value="String" />
-        <size value="4000" />
-        <layout type="log4net.Layout.PatternLayout">
-          <conversionPattern value="%message" />
-        </layout>
-      </parameter>
-      <parameter>
-        <parameterName value="@exception" />
-        <dbType value="String" />
-        <size value="2000" />
-        <layout type="log4net.Layout.ExceptionLayout" />
-      </parameter>
-    </appender>
-  </log4net>
-
 
   <system.diagnostics>
     <sources>
       <source name="AppLog" switchName="AppSourceSwitch" switchType="System.Diagnostics.SourceSwitch">
         <listeners>
-          <add name="AppListener" type="System.Diagnostics.TextWriterTraceListener" initializeData="./../../../LoggerBase/bin/Debug/AppLog.txt" />
+          <add name="AppListener" type="System.Diagnostics.TextWriterTraceListener" initializeData="./../../../AppLog.txt" />
           <remove name="Default" />
         </listeners>
       </source>
