Dividing the project to allow working logger and serialization independently.

--- a/TPA_DGMK/CommandLine/App.config
+++ b/TPA_DGMK/CommandLine/App.config
@@ -10,8 +10,10 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.1" />
   </startup>
   <paths>
-    <!--<add key="./../../../ModelDB/bin/Debug" />-->
+    <!--<add key="./../../../ModelDB/bin/Debug" />
+    <add key="./../../../LoggerDatabase/bin/Debug" />-->
     <add key="./../../../ModelXml/bin/Debug" />
+    <add key="./../../../LoggerToFile/bin/Debug" />
     <add key="./../../../ClFileSelector/bin/Debug" />
   </paths>
   <appSettings>
