--- a/TPA_DGMK/Wpf/App.config
+++ b/TPA_DGMK/Wpf/App.config
@@ -11,7 +11,9 @@
   </startup>
   <paths>
     <add key="./../../../ModelDB/bin/Debug" />
+    <add key="./../../../LoggerDatabase/bin/Debug" />
     <!--<add key="./../../../ModelXml/bin/Debug" />-->
+    <!--<add key="./../../../LoggerToFile/bin/Debug" />-->
     <add key="./../../../WpfFileSelector/bin/Debug" />
   </paths>
   <appSettings>
